k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
  labels:
    app: chat
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
      version: v1
  template:
    metadata:
      labels:
        app: chat
        version: v1
    spec:
      serviceAccountName: chat-service-account
      containers:
      - name: chat
        image: docker.io/duynguyen03/chat:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
