k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  labels:
    app: chat-service
    service: chat-service
spec:
  ports:
  - port: 9080
    targetPort: 8080
    name: http
  selector:
    app: chat
    version: v1
