k8s/destinationRule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: chat
spec:
  host: chat
  subsets:
  - name: v1
    labels:
      version: v1
